dropdown-container z-index fixed

--- a/components/dropdown-container/style.module.scss
+++ b/components/dropdown-container/style.module.scss
@@ -8,7 +8,7 @@
   border-radius: .5rem;
   width: max-content;
   cursor: pointer;
-  z-index: 1;
+  z-index: 3;
   opacity: 0;
   visibility: hidden;
   transition: 200ms all;
